# ProjectTest

./: CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt  simpleCalc.c  simpleCalc.h
tests/: CMakeLists.txt  addTest.c
